--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -12,8 +12,7 @@
 <body>
 <nav class="navbar navbar-expand-lg navbar-dark" style="background-image: linear-gradient(to right, #19093D, #645097);">
     <a class="navbar-brand" href="{{ path('home') }}">MyList</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
 
@@ -24,8 +23,14 @@
                    href="{{ path('amiibo.index') }}">Amiibo</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link"
-                   href="{{ path('home') }}">test</a>            </li>
+                <a class="nav-link {% if current_menu is defined and current_menu == 'games' %} active {% endif %}"
+                   href="{{ path('home') }}">Games</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link {% if current_menu is defined and current_menu != 'amiibos' %} d-none{% endif %}
+                                    {% if current_menu is defined and current_menu == 'amiibos' %} active {% endif %}"
+                   href="">Add amiibo</a>
+            </li>
         </ul>
         <form class="form-inline">
             <div class="animate__animated animate__swing animate__delay-2s" style="color: white">Work in progress
