--- a/templates/pages/home.html.twig
+++ b/templates/pages/home.html.twig
@@ -1,16 +1,17 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    <div class="container mt-4">
+    <link href="{{ asset('') }}">
+    <div class="container mt-4 animate__animated animate__fadeInUp ">
     <div class="text-center">
-        <h1>Last entries</h1>
-    </div>
+            <h1>Last entries</h1>
+        </div>
         {% for amiibo in amiiboLast %}
-            <div class="col-md-3">
-                <div class="card">
+            <div class="col-md-4 ">
+                <div class="card bg-light" style="margin: 3px">
                     <div class="card-body">
                         <b>Name</b> : {{ amiibo.name }}<br>
-                        <b>Serie</b> : {{ amiibo.serie }}
+                        <b>Serie</b> : {{ amiibo.serie }}<br>
                     </div>
                 </div>
             </div>
