--- a/templates/amiibo/edit.html.twig
+++ b/templates/amiibo/edit.html.twig
@@ -9,12 +9,18 @@
         </div>
         <div class="container mt-4 col-md-4">
             <div class="card">
+
+                {% if amiibo.filename %}
+                    <img src="/images/amiibo/{{ amiibo.filename }}" alt="card-img-top">
+                {% endif %}
                 <div class="card-body">
-    {{ include('amiibo/_form.html.twig', {'button_label': 'Update'}) }}
-
-    <a href="{{ path('amiibo_index') }}">back to list</a>
-
-    {{ include('amiibo/_delete_form.html.twig') }}
+                    {{ include('amiibo/_form.html.twig', {'button_label': 'Update'}) }}
+                    <div class="btn btn-secondary btn-sm">
+                        <a href="{{ path('amiibo_index') }}">back to list</a>
+                    </div>
+                    <div class="btn btn-secondary btn-sm">
+                        {{ include('amiibo/_delete_form.html.twig') }}
+                    </div>
                 </div>
             </div>
         </div>
