--- a/templates/amiibo/index.html.twig
+++ b/templates/amiibo/index.html.twig
@@ -3,15 +3,17 @@
 {% block title %}Amiibo index{% endblock %}
 
 {% block body %}
-    <link href="{{ asset('') }}">
-    <div class="container mt-4">
-        <div class="text-center">
-            <h1>List of my amiibo</h1>
-        </div>
+    <h1 class="text-center mt-4">List of my amiibo</h1>
+    <div class="container mt-4 animate__animated animate__fadeInUp ">
         {% for amiibo in amiibos %}
             <div class="col-md-4 ">
-                <div class="card bg-light" style="margin: 3px">
+                <div class="card jumbotron">
+                    {% if amiibo.filename %}
+                        <img class="amiiboimg" src="/images/amiibo/{{ amiibo.filename }}" alt="card-img-top">
+                    {% endif %}
+
                     <div class="card-body">
+
                         <b>Name</b> : {{ amiibo.name }}<br>
                         <b>Serie</b> : {{ amiibo.serie }}<br>
                         <div class="mt-1">
