--- a/templates/pages/platforms.html.twig
+++ b/templates/pages/platforms.html.twig
@@ -1,7 +1,7 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    <div class="text-center mt-4 animate__animated animate__backInUp ">
+    <div class="text-center mt-4 animate__animated animate__fadeInUp ">
         <img src="https://pogomonster.files.wordpress.com/2014/08/work-in-progress-sign.png" >
     </div>
 {% endblock %}
